--- a/Help/html/M-FastMoq.InstanceModel-1.-ctor_1.htm
+++ b/Help/html/M-FastMoq.InstanceModel-1.-ctor_1.htm
@@ -101,6 +101,9 @@
 <div class="TreeItem">
 <img src="../Item.gif"/><a class="UnselectedNode" onclick="javascript: return SelectNode(this);" href="M-FastMoq.InstanceModel-1.-ctor_1.htm" target="_self">InstanceModel(TClass) Constructor (Nullable(Func(Mocker, TClass)))</a>
 </div>
+<div class="TreeItem">
+<img src="../Item.gif"/><a class="UnselectedNode" onclick="javascript: return SelectNode(this);" href="M-FastMoq.InstanceModel-1.-ctor_2.htm" target="_self">InstanceModel(TClass) Constructor (Nullable(Func(Mocker, TClass)), List(Object))</a>
+</div>
 </div>
 </div>
 <div class="TreeNode">
