--- a/Help/html/P-FastMoq.InstanceModel.Arguments.htm
+++ b/Help/html/P-FastMoq.InstanceModel.Arguments.htm
@@ -3,28 +3,33 @@
   <head><link rel="shortcut icon" href="../favicon.ico" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="save" content="history" />
-    <title>InstanceModel Members</title>
+    <title>Arguments Property </title>
     <link rel="stylesheet" type="text/css" href="../styles/lightweight.css" xmlns:MSHelp="http://msdn.microsoft.com/mshelp" xmlns:mshelp="http://msdn.microsoft.com/mshelp" xmlns:ddue="http://ddue.schemas.microsoft.com/authoring/2003/5" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:msxsl="urn:schemas-microsoft-com:xslt" />
     <link rel="stylesheet" type="text/css" href="../styles/lw-code.css" xmlns:MSHelp="http://msdn.microsoft.com/mshelp" xmlns:mshelp="http://msdn.microsoft.com/mshelp" xmlns:ddue="http://ddue.schemas.microsoft.com/authoring/2003/5" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:msxsl="urn:schemas-microsoft-com:xslt" />
     <script type="text/javascript" xmlns:MSHelp="http://msdn.microsoft.com/mshelp" xmlns:mshelp="http://msdn.microsoft.com/mshelp" xmlns:ddue="http://ddue.schemas.microsoft.com/authoring/2003/5" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:msxsl="urn:schemas-microsoft-com:xslt" src="../scripts/languageSelector.js"> </script>
     <meta name="container" content="FastMoq" xmlns:MSHelp="http://msdn.microsoft.com/mshelp" xmlns:mshelp="http://msdn.microsoft.com/mshelp" xmlns:ddue="http://ddue.schemas.microsoft.com/authoring/2003/5" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:msxsl="urn:schemas-microsoft-com:xslt" />
-    <meta name="file" content="AllMembers.T-FastMoq.InstanceModel" xmlns:MSHelp="http://msdn.microsoft.com/mshelp" xmlns:mshelp="http://msdn.microsoft.com/mshelp" xmlns:ddue="http://ddue.schemas.microsoft.com/authoring/2003/5" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:msxsl="urn:schemas-microsoft-com:xslt" />
-    <meta name="guid" content="AllMembers.T-FastMoq.InstanceModel" xmlns:MSHelp="http://msdn.microsoft.com/mshelp" xmlns:mshelp="http://msdn.microsoft.com/mshelp" xmlns:ddue="http://ddue.schemas.microsoft.com/authoring/2003/5" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:msxsl="urn:schemas-microsoft-com:xslt" />
+    <meta name="file" content="P-FastMoq.InstanceModel.Arguments" xmlns:MSHelp="http://msdn.microsoft.com/mshelp" xmlns:mshelp="http://msdn.microsoft.com/mshelp" xmlns:ddue="http://ddue.schemas.microsoft.com/authoring/2003/5" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:msxsl="urn:schemas-microsoft-com:xslt" />
+    <meta name="guid" content="P-FastMoq.InstanceModel.Arguments" xmlns:MSHelp="http://msdn.microsoft.com/mshelp" xmlns:mshelp="http://msdn.microsoft.com/mshelp" xmlns:ddue="http://ddue.schemas.microsoft.com/authoring/2003/5" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:msxsl="urn:schemas-microsoft-com:xslt" />
     <xml xmlns:MSHelp="http://msdn.microsoft.com/mshelp" xmlns:mshelp="http://msdn.microsoft.com/mshelp" xmlns:ddue="http://ddue.schemas.microsoft.com/authoring/2003/5" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:msxsl="urn:schemas-microsoft-com:xslt">
-      <MSHelp:Attr Name="AssetID" Value="AllMembers.T:FastMoq.InstanceModel" />
-      <MSHelp:TOCTitle Title="InstanceModel Members" />
-      <MSHelp:RLTitle Title="InstanceModel Members (FastMoq)" />
-      <MSHelp:Keyword Index="A" Term="AllMembers.T:FastMoq.InstanceModel" />
-      <MSHelp:Keyword Index="A" Term="frlrfFastMoqInstanceModelMembersTopic" />
-      <MSHelp:Keyword Index="K" Term="InstanceModel class" />
-      <MSHelp:Keyword Index="K" Term="InstanceModel class, all members" />
-      <MSHelp:Keyword Index="K" Term="FastMoq.InstanceModel class" />
-      <MSHelp:Attr Name="HelpPriority" Value="1" />
+      <MSHelp:Attr Name="AssetID" Value="P:FastMoq.InstanceModel.Arguments" />
+      <MSHelp:TOCTitle Title="Arguments Property " />
+      <MSHelp:RLTitle Title="InstanceModel.Arguments Property  (FastMoq)" />
+      <MSHelp:Keyword Index="A" Term="P:FastMoq.InstanceModel.Arguments" />
+      <MSHelp:Keyword Index="A" Term="frlrfFastMoqInstanceModelClassArgumentsTopic" />
+      <MSHelp:Keyword Index="K" Term="Arguments property" />
+      <MSHelp:Keyword Index="K" Term="InstanceModel.Arguments property" />
+      <MSHelp:Keyword Index="F" Term="FastMoq.InstanceModel.Arguments" />
+      <MSHelp:Attr Name="APIType" Value="Managed" />
+      <MSHelp:Attr Name="APILocation" Value="FastMoq.dll" />
+      <MSHelp:Attr Name="APIName" Value="FastMoq.InstanceModel.Arguments" />
+      <MSHelp:Attr Name="APIName" Value="FastMoq.InstanceModel.get_Arguments" />
+      <MSHelp:Attr Name="APIName" Value="FastMoq.InstanceModel.set_Arguments" />
       <MSHelp:Attr Name="DevLang" Value="CSharp" />
       <MSHelp:Attr Name="DevLang" Value="VB" />
       <MSHelp:Attr Name="Locale" Value="en-us" />
       <MSHelp:Attr Name="TopicType" Value="kbSyntax" />
       <MSHelp:Attr Name="TopicType" Value="apiref" />
+      <MSHelp:Attr Name="Abstract" Value="Gets the arguments." />
       <MSHelp:Attr Name="AssemblyVersion" Value="" />
     </xml>
   <link rel="stylesheet" href="../TOC.css"><script type="text/javascript" src="../TOC.js"></script></head>
@@ -91,6 +96,15 @@
 <div class="TreeNode">
 <img class="TreeNodeImg" onclick="javascript: Toggle(this);" src="../Collapsed.png"/><a class="UnselectedNode" onclick="javascript: return Expand(this);" href="Properties.T-FastMoq.InstanceModel.htm" target="_self">InstanceModel Properties</a>
 <div class="Hidden">
+<div class="TreeItem">
+<img src="../Item.gif"/><a class="UnselectedNode" onclick="javascript: return SelectNode(this);" href="P-FastMoq.InstanceModel.Arguments.htm" target="_self">Arguments Property </a>
+</div>
+<div class="TreeItem">
+<img src="../Item.gif"/><a class="UnselectedNode" onclick="javascript: return SelectNode(this);" href="P-FastMoq.InstanceModel.CreateFunc.htm" target="_self">CreateFunc Property </a>
+</div>
+<div class="TreeItem">
+<img src="../Item.gif"/><a class="UnselectedNode" onclick="javascript: return SelectNode(this);" href="P-FastMoq.InstanceModel.InstanceType.htm" target="_self">InstanceType Property </a>
+</div>
 </div>
 </div>
 </div>
@@ -142,88 +156,23 @@
         <div class="topicContainer">
           <div class="topic">
             <p class="majorTitle" />
-            <h1 class="title">InstanceModel Members</h1>
+            <h1 class="title">InstanceModel<span class="languageSpecificText"><span class="cs">.</span><span class="vb">.</span><span class="cpp">::</span><span class="nu">.</span><span class="fs">.</span></span>Arguments Property </h1>
             <div id="mainSection">
               <div id="mainBody">
-                <p />
-                <p>The <a href="T-FastMoq.InstanceModel.htm">InstanceModel</a> type exposes the following members.</p>
-                <div class="LW_CollapsibleArea_Container">
-                  <div class="LW_CollapsibleArea_TitleDiv">
-                    <h2 class="LW_CollapsibleArea_Title">Properties</h2>
-                    <div class="LW_CollapsibleArea_HrDiv">
-                      <hr class="LW_CollapsibleArea_Hr" />
-                    </div>
-                  </div>
-                  <a id="propertyTableSection">
-                    <!---->
-                  </a>
-                  <table class="members">
-                    <tr>
-                      <th class="iconColumn">
-               
-            </th>
-                      <th class="nameColumn">Name</th>
-                      <th class="descriptionColumn">Description</th>
-                    </tr>
-                    <tr data="public;declared;notNetfw;">
-                      <td>
-                        <img src="../icons/pubproperty.gif" alt="Public property" title="Public property" />
-                      </td>
-                      <td>
-                        <a href="P-FastMoq.InstanceModel.Arguments.htm">Arguments</a>
-                      </td>
-                      <td>
-                        <div class="summary">
+                <div class="summary">
        Gets the arguments.
    </div>
-                      </td>
-                    </tr>
-                    <tr data="public;declared;notNetfw;">
-                      <td>
-                        <img src="../icons/pubproperty.gif" alt="Public property" title="Public property" />
-                      </td>
-                      <td>
-                        <a href="P-FastMoq.InstanceModel.CreateFunc.htm">CreateFunc</a>
-                      </td>
-                      <td>
-                        <div class="summary">
-       Gets or sets the create function.
-   </div>
-                      </td>
-                    </tr>
-                    <tr data="public;declared;notNetfw;">
-                      <td>
-                        <img src="../icons/pubproperty.gif" alt="Public property" title="Public property" />
-                      </td>
-                      <td>
-                        <a href="P-FastMoq.InstanceModel.InstanceType.htm">InstanceType</a>
-                      </td>
-                      <td>
-                        <div class="summary">
-       Gets or sets the type of the instance.
-   </div>
-                      </td>
-                    </tr>
-                  </table>
-                </div>
-                <div class="LW_CollapsibleArea_Container">
-                  <div class="LW_CollapsibleArea_TitleDiv">
-                    <h2 class="LW_CollapsibleArea_Title">See Also</h2>
-                    <div class="LW_CollapsibleArea_HrDiv">
-                      <hr class="LW_CollapsibleArea_Hr" />
-                    </div>
-                  </div>
-                  <a id="seeAlsoSection">
-                    <!---->
-                  </a>
-                  <div class="seeAlsoStyle">
-                    <a href="T-FastMoq.InstanceModel.htm">InstanceModel Class</a>
-                  </div>
-                  <div class="seeAlsoStyle">
-                    <a href="N-FastMoq.htm">FastMoq Namespace</a>
-                  </div>
-                </div>
-              </div>
+                <p />
+    <b>Namespace:</b> 
+   <a href="N-FastMoq.htm">FastMoq</a><br />
+    <b>Assembly:</b>
+   <span sdata="assembly">FastMoq</span> (in FastMoq.dll)<div class="LW_CollapsibleArea_Container"><div class="LW_CollapsibleArea_TitleDiv"><h2 class="LW_CollapsibleArea_Title">Syntax</h2><div class="LW_CollapsibleArea_HrDiv"><hr class="LW_CollapsibleArea_Hr" /></div></div><a id="syntaxSection"><!----></a><div class="CodeSnippetContainer"><div class="CodeSnippetContainerTabs"><div class="CodeSnippetContainerTabLeft"><!----></div><div class="CodeSnippetContainerTabFirst CSharpTab" id="CSharpTabId" style="background:white;border-bottom-color:white"><a href="javascript:setActiveTab('CodeSnippetContainerCode','CSharpCode','CSharpTabId');" title="C#">C#</a></div><div class="CodeSnippetContainerTab VisualBasicTab" id="VisualBasicTabId"><a href="javascript:setActiveTab('CodeSnippetContainerCode','VisualBasicCode','VisualBasicTabId');" title="Visual Basic">VB</a></div><div class="CodeSnippetContainerTab ManagedCPlusPlusTab" id="ManagedCPlusPlusTabId"><a href="javascript:setActiveTab('CodeSnippetContainerCode','ManagedCPlusPlusCode','ManagedCPlusPlusTabId');" title="Visual C++">C++</a></div><div class="CodeSnippetContainerTabRight"><!----></div></div><div class="CodeSnippetContainerCodeCollection"><div class="CodeSnippetToolBar"><div class="CodeSnippetToolBarText" /></div><div class="CodeSnippetContainerCode CSharpCode"><pre xml:space="preserve" class="libCScode"><span class="keyword">public</span> <span class="nolink">List</span>&lt;<a href="https://docs.microsoft.com/en-us/dotnet/api/system.object" target="_blank">Object</a>&gt; <span class="identifier">Arguments</span> { <span class="keyword">get</span>; <span class="keyword">set</span>; }</pre></div><div class="CodeSnippetContainerCode VisualBasicCode"><pre xml:space="preserve" class="libCScode"><span class="keyword">Public</span> <span class="keyword">Property</span> <span class="identifier">Arguments</span> <span class="keyword">As</span> <span class="nolink">List</span>(<span class="keyword">Of</span> <a href="https://docs.microsoft.com/en-us/dotnet/api/system.object" target="_blank">Object</a>)
+	<span class="keyword">Get</span>
+	<span class="keyword">Set</span></pre></div><div class="CodeSnippetContainerCode ManagedCPlusPlusCode"><pre xml:space="preserve" class="libCScode"><span class="keyword">public</span>:
+<span class="keyword">property</span> <span class="nolink">List</span>&lt;<a href="https://docs.microsoft.com/en-us/dotnet/api/system.object" target="_blank">Object</a>^&gt;^ <span class="identifier">Arguments</span> {
+	<span class="nolink">List</span>&lt;<a href="https://docs.microsoft.com/en-us/dotnet/api/system.object" target="_blank">Object</a>^&gt;^ <span class="keyword">get</span> ();
+	<span class="keyword">void</span> <span class="keyword">set</span> (<span class="nolink">List</span>&lt;<a href="https://docs.microsoft.com/en-us/dotnet/api/system.object" target="_blank">Object</a>^&gt;^ <span class="parameter">value</span>);
+}</pre></div></div></div><h4 class="subHeading">Field Value</h4>The arguments.</div><div class="LW_CollapsibleArea_Container"><div class="LW_CollapsibleArea_TitleDiv"><h2 class="LW_CollapsibleArea_Title">See Also</h2><div class="LW_CollapsibleArea_HrDiv"><hr class="LW_CollapsibleArea_Hr" /></div></div><a id="seeAlsoSection"><!----></a><div class="seeAlsoStyle"><a href="T-FastMoq.InstanceModel.htm">InstanceModel Class</a></div><div class="seeAlsoStyle"><a href="N-FastMoq.htm">FastMoq Namespace</a></div></div></div>
             </div>
           </div>
         </div>
