--- a/Help/html/Properties.T-FastMoq.InstanceModel-1.htm
+++ b/Help/html/Properties.T-FastMoq.InstanceModel-1.htm
@@ -170,6 +170,18 @@
                       <th class="nameColumn">Name</th>
                       <th class="descriptionColumn">Description</th>
                     </tr>
+                    <tr data="public;inherited;notNetfw;">
+                      <td>
+                        <img src="../icons/pubproperty.gif" alt="Public property" title="Public property" />
+                      </td>
+                      <td>
+                        <a href="P-FastMoq.InstanceModel.Arguments.htm">Arguments</a>
+                      </td>
+                      <td>
+                        <div class="summary">
+       Gets the arguments.
+   </div> (Inherited from <a href="T-FastMoq.InstanceModel.htm">InstanceModel</a>.)</td>
+                    </tr>
                     <tr data="public;declared;notNetfw;">
                       <td>
                         <img src="../icons/pubproperty.gif" alt="Public property" title="Public property" />
