--- a/Help/html/Properties.T-FastMoq.InstanceModel.htm
+++ b/Help/html/Properties.T-FastMoq.InstanceModel.htm
@@ -89,6 +89,9 @@
 <img class="TreeNodeImg" onclick="javascript: Toggle(this);" src="../Collapsed.png"/><a class="UnselectedNode" onclick="javascript: return Expand(this);" href="Properties.T-FastMoq.InstanceModel.htm" target="_self">InstanceModel Properties</a>
 <div class="Hidden">
 <div class="TreeItem">
+<img src="../Item.gif"/><a class="UnselectedNode" onclick="javascript: return SelectNode(this);" href="P-FastMoq.InstanceModel.Arguments.htm" target="_self">Arguments Property </a>
+</div>
+<div class="TreeItem">
 <img src="../Item.gif"/><a class="UnselectedNode" onclick="javascript: return SelectNode(this);" href="P-FastMoq.InstanceModel.CreateFunc.htm" target="_self">CreateFunc Property </a>
 </div>
 <div class="TreeItem">
@@ -166,6 +169,19 @@
             </th>
                       <th class="nameColumn">Name</th>
                       <th class="descriptionColumn">Description</th>
+                    </tr>
+                    <tr data="public;declared;notNetfw;">
+                      <td>
+                        <img src="../icons/pubproperty.gif" alt="Public property" title="Public property" />
+                      </td>
+                      <td>
+                        <a href="P-FastMoq.InstanceModel.Arguments.htm">Arguments</a>
+                      </td>
+                      <td>
+                        <div class="summary">
+       Gets the arguments.
+   </div>
+                      </td>
                     </tr>
                     <tr data="public;declared;notNetfw;">
                       <td>
