--- a/Help/html/Properties.T-FastMoq.Mocker.htm
+++ b/Help/html/Properties.T-FastMoq.Mocker.htm
@@ -114,6 +114,9 @@
 <img class="TreeNodeImg" onclick="javascript: Toggle(this);" src="../Collapsed.png"/><a class="UnselectedNode" onclick="javascript: return Expand(this);" href="Properties.T-FastMoq.Mocker.htm" target="_self">Mocker Properties</a>
 <div class="Hidden">
 <div class="TreeItem">
+<img src="../Item.gif"/><a class="UnselectedNode" onclick="javascript: return SelectNode(this);" href="P-FastMoq.Mocker.InnerMockResolution.htm" target="_self">InnerMockResolution Property </a>
+</div>
+<div class="TreeItem">
 <img src="../Item.gif"/><a class="UnselectedNode" onclick="javascript: return SelectNode(this);" href="P-FastMoq.Mocker.Strict.htm" target="_self">Strict Property </a>
 </div>
 </div>
@@ -178,6 +181,15 @@
             </th>
                       <th class="nameColumn">Name</th>
                       <th class="descriptionColumn">Description</th>
+                    </tr>
+                    <tr data="public;declared;notNetfw;">
+                      <td>
+                        <img src="../icons/pubproperty.gif" alt="Public property" title="Public property" />
+                      </td>
+                      <td>
+                        <a href="P-FastMoq.Mocker.InnerMockResolution.htm">InnerMockResolution</a>
+                      </td>
+                      <td />
                     </tr>
                     <tr data="public;declared;notNetfw;">
                       <td>
