--- a/Help/html/M-FastMoq.Mocker.CreateMock--1.htm
+++ b/Help/html/M-FastMoq.Mocker.CreateMock--1.htm
@@ -141,6 +141,9 @@
 </div>
 </div>
 <div class="TreeItem">
+<img src="../Item.gif"/><a class="UnselectedNode" onclick="javascript: return SelectNode(this);" href="M-FastMoq.Mocker.CreateMockInstance--1.htm" target="_self">CreateMockInstance(T) Method (Boolean)</a>
+</div>
+<div class="TreeItem">
 <img src="../Item.gif"/><a class="UnselectedNode" onclick="javascript: return SelectNode(this);" href="M-FastMoq.Mocker.GetArgData--1.htm" target="_self">GetArgData(T) Method (Dictionary(Type, Object))</a>
 </div>
 <div class="TreeNode">
