--- a/Help/html/M-FastMoq.Mocker.CreateMockInstance--1.htm
+++ b/Help/html/M-FastMoq.Mocker.CreateMockInstance--1.htm
@@ -3,27 +3,27 @@
   <head><link rel="shortcut icon" href="../favicon.ico" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="save" content="history" />
-    <title>CreateMock Method </title>
+    <title>CreateMockInstance(T) Method (Boolean)</title>
     <link rel="stylesheet" type="text/css" href="../styles/lightweight.css" xmlns:MSHelp="http://msdn.microsoft.com/mshelp" xmlns:mshelp="http://msdn.microsoft.com/mshelp" xmlns:ddue="http://ddue.schemas.microsoft.com/authoring/2003/5" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:msxsl="urn:schemas-microsoft-com:xslt" />
     <link rel="stylesheet" type="text/css" href="../styles/lw-code.css" xmlns:MSHelp="http://msdn.microsoft.com/mshelp" xmlns:mshelp="http://msdn.microsoft.com/mshelp" xmlns:ddue="http://ddue.schemas.microsoft.com/authoring/2003/5" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:msxsl="urn:schemas-microsoft-com:xslt" />
     <script type="text/javascript" xmlns:MSHelp="http://msdn.microsoft.com/mshelp" xmlns:mshelp="http://msdn.microsoft.com/mshelp" xmlns:ddue="http://ddue.schemas.microsoft.com/authoring/2003/5" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:msxsl="urn:schemas-microsoft-com:xslt" src="../scripts/languageSelector.js"> </script>
     <meta name="container" content="FastMoq" xmlns:MSHelp="http://msdn.microsoft.com/mshelp" xmlns:mshelp="http://msdn.microsoft.com/mshelp" xmlns:ddue="http://ddue.schemas.microsoft.com/authoring/2003/5" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:msxsl="urn:schemas-microsoft-com:xslt" />
-    <meta name="file" content="Overload-FastMoq.Mocker.CreateMock" xmlns:MSHelp="http://msdn.microsoft.com/mshelp" xmlns:mshelp="http://msdn.microsoft.com/mshelp" xmlns:ddue="http://ddue.schemas.microsoft.com/authoring/2003/5" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:msxsl="urn:schemas-microsoft-com:xslt" />
-    <meta name="guid" content="Overload-FastMoq.Mocker.CreateMock" xmlns:MSHelp="http://msdn.microsoft.com/mshelp" xmlns:mshelp="http://msdn.microsoft.com/mshelp" xmlns:ddue="http://ddue.schemas.microsoft.com/authoring/2003/5" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:msxsl="urn:schemas-microsoft-com:xslt" />
+    <meta name="file" content="M-FastMoq.Mocker.CreateMockInstance--1" xmlns:MSHelp="http://msdn.microsoft.com/mshelp" xmlns:mshelp="http://msdn.microsoft.com/mshelp" xmlns:ddue="http://ddue.schemas.microsoft.com/authoring/2003/5" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:msxsl="urn:schemas-microsoft-com:xslt" />
+    <meta name="guid" content="M-FastMoq.Mocker.CreateMockInstance--1" xmlns:MSHelp="http://msdn.microsoft.com/mshelp" xmlns:mshelp="http://msdn.microsoft.com/mshelp" xmlns:ddue="http://ddue.schemas.microsoft.com/authoring/2003/5" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:msxsl="urn:schemas-microsoft-com:xslt" />
     <xml xmlns:MSHelp="http://msdn.microsoft.com/mshelp" xmlns:mshelp="http://msdn.microsoft.com/mshelp" xmlns:ddue="http://ddue.schemas.microsoft.com/authoring/2003/5" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:msxsl="urn:schemas-microsoft-com:xslt">
-      <MSHelp:Attr Name="AssetID" Value="Overload:FastMoq.Mocker.CreateMock" />
-      <MSHelp:TOCTitle Title="CreateMock Method " />
-      <MSHelp:RLTitle Title="Mocker.CreateMock Method  (FastMoq)" />
-      <MSHelp:Keyword Index="A" Term="Overload:FastMoq.Mocker.CreateMock" />
-      <MSHelp:Keyword Index="A" Term="frlrfFastMoqMockerClassCreateMockTopic" />
-      <MSHelp:Keyword Index="K" Term="CreateMock method" />
-      <MSHelp:Keyword Index="K" Term="Mocker.CreateMock method" />
-      <MSHelp:Keyword Index="F" Term="FastMoq.Mocker.CreateMock" />
+      <MSHelp:Attr Name="AssetID" Value="M:FastMoq.Mocker.CreateMockInstance``1(System.Boolean)" />
+      <MSHelp:TOCTitle Title="CreateMockInstance(T) Method (Boolean)" />
+      <MSHelp:RLTitle Title="Mocker.CreateMockInstance(T) Method (Boolean) (FastMoq)" />
+      <MSHelp:Keyword Index="A" Term="M:FastMoq.Mocker.CreateMockInstance``1(System.Boolean)" />
+      <MSHelp:Attr Name="APIType" Value="Managed" />
+      <MSHelp:Attr Name="APILocation" Value="FastMoq.dll" />
+      <MSHelp:Attr Name="APIName" Value="FastMoq.Mocker.CreateMockInstance" />
       <MSHelp:Attr Name="DevLang" Value="CSharp" />
       <MSHelp:Attr Name="DevLang" Value="VB" />
       <MSHelp:Attr Name="Locale" Value="en-us" />
       <MSHelp:Attr Name="TopicType" Value="kbSyntax" />
       <MSHelp:Attr Name="TopicType" Value="apiref" />
+      <MSHelp:Attr Name="Abstract" Value="Creates the mock instance that is not automatically injected." />
       <MSHelp:Attr Name="AssemblyVersion" Value="" />
     </xml>
   <link rel="stylesheet" href="../TOC.css"><script type="text/javascript" src="../TOC.js"></script></head>
@@ -132,12 +132,6 @@
 <div class="TreeNode">
 <img class="TreeNodeImg" onclick="javascript: Toggle(this);" src="../Collapsed.png"/><a class="UnselectedNode" onclick="javascript: return Expand(this);" href="Overload-FastMoq.Mocker.CreateMock.htm" target="_self">CreateMock Method </a>
 <div class="Hidden">
-<div class="TreeItem">
-<img src="../Item.gif"/><a class="UnselectedNode" onclick="javascript: return SelectNode(this);" href="M-FastMoq.Mocker.CreateMock.htm" target="_self">CreateMock Method (Type, Boolean)</a>
-</div>
-<div class="TreeItem">
-<img src="../Item.gif"/><a class="UnselectedNode" onclick="javascript: return SelectNode(this);" href="M-FastMoq.Mocker.CreateMock--1.htm" target="_self">CreateMock(T) Method (Boolean)</a>
-</div>
 </div>
 </div>
 <div class="TreeItem">
@@ -226,76 +220,26 @@
         <div class="topicContainer">
           <div class="topic">
             <p class="majorTitle" />
-            <h1 class="title">Mocker<span class="languageSpecificText"><span class="cs">.</span><span class="vb">.</span><span class="cpp">::</span><span class="nu">.</span><span class="fs">.</span></span>CreateMock Method </h1>
+            <h1 class="title">Mocker<span class="languageSpecificText"><span class="cs">.</span><span class="vb">.</span><span class="cpp">::</span><span class="nu">.</span><span class="fs">.</span></span>CreateMockInstance<span class="languageSpecificText"><span class="cs">&lt;</span><span class="vb">(Of </span><span class="cpp">&lt;</span><span class="nu">(</span><span class="fs">&lt;'</span></span><span class="typeparameter">T</span><span class="languageSpecificText"><span class="cs">&gt;</span><span class="vb">)</span><span class="cpp">&gt;</span><span class="nu">)</span><span class="fs">&gt;</span></span> Method (Boolean)</h1>
             <div id="mainSection">
               <div id="mainBody">
-                <div class="LW_CollapsibleArea_Container">
-                  <div class="LW_CollapsibleArea_TitleDiv">
-                    <h2 class="LW_CollapsibleArea_Title">Overload List</h2>
-                    <div class="LW_CollapsibleArea_HrDiv">
-                      <hr class="LW_CollapsibleArea_Hr" />
-                    </div>
-                  </div>
-                  <a id="overloadMembersTableSection">
-                    <!---->
-                  </a>
-                  <table class="members">
-                    <tr>
-                      <th class="iconColumn">
-               
-            </th>
-                      <th class="nameColumn">Name</th>
-                      <th class="descriptionColumn">Description</th>
-                    </tr>
-                    <tr data="public;declared;notNetfw;">
-                      <td>
-                        <img src="../icons/pubmethod.gif" alt="Public method" title="Public method" />
-                      </td>
-                      <td>
-                        <a href="M-FastMoq.Mocker.CreateMock.htm">CreateMock(Type, Boolean)</a>
-                      </td>
-                      <td>
-                        <div class="summary">
-Creates the <a href="T-FastMoq.MockModel-1.htm">MockModel<span class="languageSpecificText"><span class="cs">&lt;</span><span class="vb">(Of </span><span class="cpp">&lt;</span><span class="nu">(</span><span class="fs">&lt;'</span></span>T<span class="languageSpecificText"><span class="cs">&gt;</span><span class="vb">)</span><span class="cpp">&gt;</span><span class="nu">)</span><span class="fs">&gt;</span></span></a> from the <span class="code">Type</span>. This throws an exception if the mock already exists.
+                <div class="summary">
+Creates the mock instance that is not automatically injected.
 </div>
-                      </td>
-                    </tr>
-                    <tr data="public;declared;notNetfw;">
-                      <td>
-                        <img src="../icons/pubmethod.gif" alt="Public method" title="Public method" />
-                      </td>
-                      <td>
-                        <a href="M-FastMoq.Mocker.CreateMock--1.htm">CreateMock<span class="languageSpecificText"><span class="cs">&lt;</span><span class="vb">(Of </span><span class="cpp">&lt;</span><span class="fs">&lt;'</span><span class="nu">(</span></span>T<span class="languageSpecificText"><span class="cs">&gt;</span><span class="vb">)</span><span class="cpp">&gt;</span><span class="fs">&gt;</span><span class="nu">)</span></span>(Boolean)</a>
-                      </td>
-                      <td>
-                        <div class="summary">
-Creates the <a href="T-FastMoq.MockModel-1.htm">MockModel<span class="languageSpecificText"><span class="cs">&lt;</span><span class="vb">(Of </span><span class="cpp">&lt;</span><span class="nu">(</span><span class="fs">&lt;'</span></span>T<span class="languageSpecificText"><span class="cs">&gt;</span><span class="vb">)</span><span class="cpp">&gt;</span><span class="nu">)</span><span class="fs">&gt;</span></span></a> from the type <span class="code">T</span>. This throws an exception if the mock already exists.
-</div>
-                      </td>
-                    </tr>
-                  </table>
-                </div>
-                <div class="LW_CollapsibleArea_Container">
-                  <div class="LW_CollapsibleArea_TitleDiv">
-                    <h2 class="LW_CollapsibleArea_Title">See Also</h2>
-                    <div class="LW_CollapsibleArea_HrDiv">
-                      <hr class="LW_CollapsibleArea_Hr" />
-                    </div>
-                  </div>
-                  <a id="seeAlsoSection">
-                    <!---->
-                  </a>
-                  <div class="seeAlsoStyle">
-                    <a href="T-FastMoq.Mocker.htm">Mocker Class</a>
-                  </div>
-                  <div class="seeAlsoStyle">
-                    <a href="AllMembers.T-FastMoq.Mocker.htm">Mocker Members</a>
-                  </div>
-                  <div class="seeAlsoStyle">
-                    <a href="N-FastMoq.htm">FastMoq Namespace</a>
-                  </div>
-                </div>
-              </div>
+                <p />
+    <b>Namespace:</b> 
+   <a href="N-FastMoq.htm">FastMoq</a><br />
+    <b>Assembly:</b>
+   <span sdata="assembly">FastMoq</span> (in FastMoq.dll)<div class="LW_CollapsibleArea_Container"><div class="LW_CollapsibleArea_TitleDiv"><h2 class="LW_CollapsibleArea_Title">Syntax</h2><div class="LW_CollapsibleArea_HrDiv"><hr class="LW_CollapsibleArea_Hr" /></div></div><a id="syntaxSection"><!----></a><div class="CodeSnippetContainer"><div class="CodeSnippetContainerTabs"><div class="CodeSnippetContainerTabLeft"><!----></div><div class="CodeSnippetContainerTabFirst CSharpTab" id="CSharpTabId" style="background:white;border-bottom-color:white"><a href="javascript:setActiveTab('CodeSnippetContainerCode','CSharpCode','CSharpTabId');" title="C#">C#</a></div><div class="CodeSnippetContainerTab VisualBasicTab" id="VisualBasicTabId"><a href="javascript:setActiveTab('CodeSnippetContainerCode','VisualBasicCode','VisualBasicTabId');" title="Visual Basic">VB</a></div><div class="CodeSnippetContainerTab ManagedCPlusPlusTab" id="ManagedCPlusPlusTabId"><a href="javascript:setActiveTab('CodeSnippetContainerCode','ManagedCPlusPlusCode','ManagedCPlusPlusTabId');" title="Visual C++">C++</a></div><div class="CodeSnippetContainerTabRight"><!----></div></div><div class="CodeSnippetContainerCodeCollection"><div class="CodeSnippetToolBar"><div class="CodeSnippetToolBarText" /></div><div class="CodeSnippetContainerCode CSharpCode"><pre xml:space="preserve" class="libCScode"><span class="keyword">public</span> <span class="nolink">Mock</span>&lt;T&gt; <span class="identifier">CreateMockInstance</span>&lt;T&gt;(
+	<a href="https://docs.microsoft.com/en-us/dotnet/api/system.boolean" target="_blank">bool</a> <span class="parameter">nonPublic</span>
+)
+</pre></div><div class="CodeSnippetContainerCode VisualBasicCode"><pre xml:space="preserve" class="libCScode"><span class="keyword">Public</span> <span class="keyword">Function</span> <span class="identifier">CreateMockInstance</span>(<span class="keyword">Of</span> T) ( _
+	<span class="parameter">nonPublic</span> <span class="keyword">As</span> <a href="https://docs.microsoft.com/en-us/dotnet/api/system.boolean" target="_blank">Boolean</a> _
+) <span class="keyword">As</span> <span class="nolink">Mock</span>(<span class="keyword">Of</span> T)</pre></div><div class="CodeSnippetContainerCode ManagedCPlusPlusCode"><pre xml:space="preserve" class="libCScode"><span class="keyword">public</span>:
+<span class="keyword">generic</span>&lt;<span class="keyword">typename</span> T&gt;
+<span class="nolink">Mock</span>&lt;T&gt;^ <span class="identifier">CreateMockInstance</span>(
+	<a href="https://docs.microsoft.com/en-us/dotnet/api/system.boolean" target="_blank">bool</a>^ <span class="parameter">nonPublic</span>
+)</pre></div></div></div><h4 class="subHeading">Type Parameters</h4><dl><dt><span class="parameterItalic">T</span></dt><dd /></dl><div id="parameters"><h4 class="subHeading">Parameters</h4><dl paramName="nonPublic"><dt><span class="parameterItalic">nonPublic</span></dt><dd>Type: <a href="https://docs.microsoft.com/en-us/dotnet/api/system.boolean" target="_blank">Boolean</a><br />if set to <span class="code">true</span> [non public].</dd></dl></div><h4 class="subHeading">Return Value</h4>Mock.</div><div class="LW_CollapsibleArea_Container"><div class="LW_CollapsibleArea_TitleDiv"><h2 class="LW_CollapsibleArea_Title">Exceptions</h2><div class="LW_CollapsibleArea_HrDiv"><hr class="LW_CollapsibleArea_Hr" /></div></div><a id="exceptionsSection"><!----></a><div class="tableSection"><table width="100%" cellspacing="0" cellpadding="5" frame="lhs"><tr><th class="exceptionNameColumn">Exception</th><th class="exceptionConditionColumn">Condition</th></tr><tr><td><a href="https://docs.microsoft.com/en-us/dotnet/api/system.argumentexception" target="_blank">ArgumentException</a></td><td>type must be a class. - type</td></tr><tr><td><a href="https://docs.microsoft.com/en-us/dotnet/api/system.applicationexception" target="_blank">ApplicationException</a></td><td>Cannot create instance.</td></tr></table></div></div><div class="LW_CollapsibleArea_Container"><div class="LW_CollapsibleArea_TitleDiv"><h2 class="LW_CollapsibleArea_Title">See Also</h2><div class="LW_CollapsibleArea_HrDiv"><hr class="LW_CollapsibleArea_Hr" /></div></div><a id="seeAlsoSection"><!----></a><div class="seeAlsoStyle"><a href="T-FastMoq.Mocker.htm">Mocker Class</a></div><div class="seeAlsoStyle"><span class="nolink">CreateMockInstance Overload</span></div><div class="seeAlsoStyle"><a href="N-FastMoq.htm">FastMoq Namespace</a></div></div></div>
             </div>
           </div>
         </div>
