--- a/Help/html/M-FastMoq.Mocker.GetList--1_2.htm
+++ b/Help/html/M-FastMoq.Mocker.GetList--1_2.htm
@@ -3,29 +3,30 @@
   <head><link rel="shortcut icon" href="../favicon.ico" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="save" content="history" />
-    <title>CreateMock Method </title>
+    <title>GetList(T) Method (Int32, Func(T))</title>
     <link rel="stylesheet" type="text/css" href="../styles/lightweight.css" xmlns:MSHelp="http://msdn.microsoft.com/mshelp" xmlns:mshelp="http://msdn.microsoft.com/mshelp" xmlns:ddue="http://ddue.schemas.microsoft.com/authoring/2003/5" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:msxsl="urn:schemas-microsoft-com:xslt" />
     <link rel="stylesheet" type="text/css" href="../styles/lw-code.css" xmlns:MSHelp="http://msdn.microsoft.com/mshelp" xmlns:mshelp="http://msdn.microsoft.com/mshelp" xmlns:ddue="http://ddue.schemas.microsoft.com/authoring/2003/5" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:msxsl="urn:schemas-microsoft-com:xslt" />
     <script type="text/javascript" xmlns:MSHelp="http://msdn.microsoft.com/mshelp" xmlns:mshelp="http://msdn.microsoft.com/mshelp" xmlns:ddue="http://ddue.schemas.microsoft.com/authoring/2003/5" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:msxsl="urn:schemas-microsoft-com:xslt" src="../scripts/languageSelector.js"> </script>
     <meta name="container" content="FastMoq" xmlns:MSHelp="http://msdn.microsoft.com/mshelp" xmlns:mshelp="http://msdn.microsoft.com/mshelp" xmlns:ddue="http://ddue.schemas.microsoft.com/authoring/2003/5" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:msxsl="urn:schemas-microsoft-com:xslt" />
-    <meta name="file" content="Overload-FastMoq.Mocker.CreateMock" xmlns:MSHelp="http://msdn.microsoft.com/mshelp" xmlns:mshelp="http://msdn.microsoft.com/mshelp" xmlns:ddue="http://ddue.schemas.microsoft.com/authoring/2003/5" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:msxsl="urn:schemas-microsoft-com:xslt" />
-    <meta name="guid" content="Overload-FastMoq.Mocker.CreateMock" xmlns:MSHelp="http://msdn.microsoft.com/mshelp" xmlns:mshelp="http://msdn.microsoft.com/mshelp" xmlns:ddue="http://ddue.schemas.microsoft.com/authoring/2003/5" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:msxsl="urn:schemas-microsoft-com:xslt" />
+    <meta name="file" content="M-FastMoq.Mocker.GetList--1_2" xmlns:MSHelp="http://msdn.microsoft.com/mshelp" xmlns:mshelp="http://msdn.microsoft.com/mshelp" xmlns:ddue="http://ddue.schemas.microsoft.com/authoring/2003/5" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:msxsl="urn:schemas-microsoft-com:xslt" />
+    <meta name="guid" content="M-FastMoq.Mocker.GetList--1_2" xmlns:MSHelp="http://msdn.microsoft.com/mshelp" xmlns:mshelp="http://msdn.microsoft.com/mshelp" xmlns:ddue="http://ddue.schemas.microsoft.com/authoring/2003/5" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:msxsl="urn:schemas-microsoft-com:xslt" />
     <xml xmlns:MSHelp="http://msdn.microsoft.com/mshelp" xmlns:mshelp="http://msdn.microsoft.com/mshelp" xmlns:ddue="http://ddue.schemas.microsoft.com/authoring/2003/5" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:msxsl="urn:schemas-microsoft-com:xslt">
-      <MSHelp:Attr Name="AssetID" Value="Overload:FastMoq.Mocker.CreateMock" />
-      <MSHelp:TOCTitle Title="CreateMock Method " />
-      <MSHelp:RLTitle Title="Mocker.CreateMock Method  (FastMoq)" />
-      <MSHelp:Keyword Index="A" Term="Overload:FastMoq.Mocker.CreateMock" />
-      <MSHelp:Keyword Index="A" Term="frlrfFastMoqMockerClassCreateMockTopic" />
-      <MSHelp:Keyword Index="K" Term="CreateMock method" />
-      <MSHelp:Keyword Index="K" Term="Mocker.CreateMock method" />
-      <MSHelp:Keyword Index="F" Term="FastMoq.Mocker.CreateMock" />
+      <MSHelp:Attr Name="AssetID" Value="M:FastMoq.Mocker.GetList``1(System.Int32,System.Func{``0})" />
+      <MSHelp:TOCTitle Title="GetList(T) Method (Int32, Func(T))" />
+      <MSHelp:RLTitle Title="Mocker.GetList(T) Method (Int32, Func(T)) (FastMoq)" />
+      <MSHelp:Keyword Index="A" Term="M:FastMoq.Mocker.GetList``1(System.Int32,System.Func{``0})" />
+      <MSHelp:Attr Name="APIType" Value="Managed" />
+      <MSHelp:Attr Name="APILocation" Value="FastMoq.dll" />
+      <MSHelp:Attr Name="APIName" Value="FastMoq.Mocker.GetList" />
       <MSHelp:Attr Name="DevLang" Value="CSharp" />
       <MSHelp:Attr Name="DevLang" Value="VB" />
       <MSHelp:Attr Name="Locale" Value="en-us" />
       <MSHelp:Attr Name="TopicType" Value="kbSyntax" />
       <MSHelp:Attr Name="TopicType" Value="apiref" />
+      <MSHelp:Attr Name="Abstract" Value="Gets a list with the specified number of list items, using a custom function." />
       <MSHelp:Attr Name="AssemblyVersion" Value="" />
     </xml>
+    <link type="text/css" rel="stylesheet" href="../styles/highlight.css" />
   <link rel="stylesheet" href="../TOC.css"><script type="text/javascript" src="../TOC.js"></script></head>
   <body onload="javascript: Initialize();" onresize="javascript: ResizeTree();">
             <div id="TOCDiv" class="TOCDiv" style="width: 310px; float: left; position: relative; ">
@@ -132,12 +133,6 @@
 <div class="TreeNode">
 <img class="TreeNodeImg" onclick="javascript: Toggle(this);" src="../Collapsed.png"/><a class="UnselectedNode" onclick="javascript: return Expand(this);" href="Overload-FastMoq.Mocker.CreateMock.htm" target="_self">CreateMock Method </a>
 <div class="Hidden">
-<div class="TreeItem">
-<img src="../Item.gif"/><a class="UnselectedNode" onclick="javascript: return SelectNode(this);" href="M-FastMoq.Mocker.CreateMock.htm" target="_self">CreateMock Method (Type, Boolean)</a>
-</div>
-<div class="TreeItem">
-<img src="../Item.gif"/><a class="UnselectedNode" onclick="javascript: return SelectNode(this);" href="M-FastMoq.Mocker.CreateMock--1.htm" target="_self">CreateMock(T) Method (Boolean)</a>
-</div>
 </div>
 </div>
 <div class="TreeItem">
@@ -149,6 +144,15 @@
 <div class="TreeNode">
 <img class="TreeNodeImg" onclick="javascript: Toggle(this);" src="../Collapsed.png"/><a class="UnselectedNode" onclick="javascript: return Expand(this);" href="Overload-FastMoq.Mocker.GetList-.htm" target="_self">GetList Method </a>
 <div class="Hidden">
+<div class="TreeItem">
+<img src="../Item.gif"/><a class="UnselectedNode" onclick="javascript: return SelectNode(this);" href="M-FastMoq.Mocker.GetList--1.htm" target="_self">GetList(T) Method (Int32, Func(Int32, T), Action(Int32, T))</a>
+</div>
+<div class="TreeItem">
+<img src="../Item.gif"/><a class="UnselectedNode" onclick="javascript: return SelectNode(this);" href="M-FastMoq.Mocker.GetList--1_1.htm" target="_self">GetList(T) Method (Int32, Func(Int32, T))</a>
+</div>
+<div class="TreeItem">
+<img src="../Item.gif"/><a class="UnselectedNode" onclick="javascript: return SelectNode(this);" href="M-FastMoq.Mocker.GetList--1_2.htm" target="_self">GetList(T) Method (Int32, Func(T))</a>
+</div>
 </div>
 </div>
 <div class="TreeItem">
@@ -226,76 +230,33 @@
         <div class="topicContainer">
           <div class="topic">
             <p class="majorTitle" />
-            <h1 class="title">Mocker<span class="languageSpecificText"><span class="cs">.</span><span class="vb">.</span><span class="cpp">::</span><span class="nu">.</span><span class="fs">.</span></span>CreateMock Method </h1>
+            <h1 class="title">Mocker<span class="languageSpecificText"><span class="cs">.</span><span class="vb">.</span><span class="cpp">::</span><span class="nu">.</span><span class="fs">.</span></span>GetList<span class="languageSpecificText"><span class="cs">&lt;</span><span class="vb">(Of </span><span class="cpp">&lt;</span><span class="nu">(</span><span class="fs">&lt;'</span></span><span class="typeparameter">T</span><span class="languageSpecificText"><span class="cs">&gt;</span><span class="vb">)</span><span class="cpp">&gt;</span><span class="nu">)</span><span class="fs">&gt;</span></span> Method (Int32, Func<span class="languageSpecificText"><span class="cs">&lt;</span><span class="vb">(Of </span><span class="cpp">&lt;</span><span class="nu">(</span><span class="fs">&lt;'</span></span><span class="typeparameter">T</span><span class="languageSpecificText"><span class="cs">&gt;</span><span class="vb">)</span><span class="cpp">&gt;</span><span class="nu">)</span><span class="fs">&gt;</span></span>)</h1>
             <div id="mainSection">
               <div id="mainBody">
-                <div class="LW_CollapsibleArea_Container">
-                  <div class="LW_CollapsibleArea_TitleDiv">
-                    <h2 class="LW_CollapsibleArea_Title">Overload List</h2>
-                    <div class="LW_CollapsibleArea_HrDiv">
-                      <hr class="LW_CollapsibleArea_Hr" />
-                    </div>
-                  </div>
-                  <a id="overloadMembersTableSection">
-                    <!---->
-                  </a>
-                  <table class="members">
-                    <tr>
-                      <th class="iconColumn">
-               
-            </th>
-                      <th class="nameColumn">Name</th>
-                      <th class="descriptionColumn">Description</th>
-                    </tr>
-                    <tr data="public;declared;notNetfw;">
-                      <td>
-                        <img src="../icons/pubmethod.gif" alt="Public method" title="Public method" />
-                      </td>
-                      <td>
-                        <a href="M-FastMoq.Mocker.CreateMock.htm">CreateMock(Type, Boolean)</a>
-                      </td>
-                      <td>
-                        <div class="summary">
-Creates the <a href="T-FastMoq.MockModel-1.htm">MockModel<span class="languageSpecificText"><span class="cs">&lt;</span><span class="vb">(Of </span><span class="cpp">&lt;</span><span class="nu">(</span><span class="fs">&lt;'</span></span>T<span class="languageSpecificText"><span class="cs">&gt;</span><span class="vb">)</span><span class="cpp">&gt;</span><span class="nu">)</span><span class="fs">&gt;</span></span></a> from the <span class="code">Type</span>. This throws an exception if the mock already exists.
+                <div class="summary">
+Gets a list with the specified number of list items, using a custom function.
 </div>
-                      </td>
-                    </tr>
-                    <tr data="public;declared;notNetfw;">
-                      <td>
-                        <img src="../icons/pubmethod.gif" alt="Public method" title="Public method" />
-                      </td>
-                      <td>
-                        <a href="M-FastMoq.Mocker.CreateMock--1.htm">CreateMock<span class="languageSpecificText"><span class="cs">&lt;</span><span class="vb">(Of </span><span class="cpp">&lt;</span><span class="fs">&lt;'</span><span class="nu">(</span></span>T<span class="languageSpecificText"><span class="cs">&gt;</span><span class="vb">)</span><span class="cpp">&gt;</span><span class="fs">&gt;</span><span class="nu">)</span></span>(Boolean)</a>
-                      </td>
-                      <td>
-                        <div class="summary">
-Creates the <a href="T-FastMoq.MockModel-1.htm">MockModel<span class="languageSpecificText"><span class="cs">&lt;</span><span class="vb">(Of </span><span class="cpp">&lt;</span><span class="nu">(</span><span class="fs">&lt;'</span></span>T<span class="languageSpecificText"><span class="cs">&gt;</span><span class="vb">)</span><span class="cpp">&gt;</span><span class="nu">)</span><span class="fs">&gt;</span></span></a> from the type <span class="code">T</span>. This throws an exception if the mock already exists.
-</div>
-                      </td>
-                    </tr>
-                  </table>
-                </div>
-                <div class="LW_CollapsibleArea_Container">
-                  <div class="LW_CollapsibleArea_TitleDiv">
-                    <h2 class="LW_CollapsibleArea_Title">See Also</h2>
-                    <div class="LW_CollapsibleArea_HrDiv">
-                      <hr class="LW_CollapsibleArea_Hr" />
-                    </div>
-                  </div>
-                  <a id="seeAlsoSection">
-                    <!---->
-                  </a>
-                  <div class="seeAlsoStyle">
-                    <a href="T-FastMoq.Mocker.htm">Mocker Class</a>
-                  </div>
-                  <div class="seeAlsoStyle">
-                    <a href="AllMembers.T-FastMoq.Mocker.htm">Mocker Members</a>
-                  </div>
-                  <div class="seeAlsoStyle">
-                    <a href="N-FastMoq.htm">FastMoq Namespace</a>
-                  </div>
-                </div>
-              </div>
+                <p />
+    <b>Namespace:</b> 
+   <a href="N-FastMoq.htm">FastMoq</a><br />
+    <b>Assembly:</b>
+   <span sdata="assembly">FastMoq</span> (in FastMoq.dll)<div class="LW_CollapsibleArea_Container"><div class="LW_CollapsibleArea_TitleDiv"><h2 class="LW_CollapsibleArea_Title">Syntax</h2><div class="LW_CollapsibleArea_HrDiv"><hr class="LW_CollapsibleArea_Hr" /></div></div><a id="syntaxSection"><!----></a><div class="CodeSnippetContainer"><div class="CodeSnippetContainerTabs"><div class="CodeSnippetContainerTabLeft"><!----></div><div class="CodeSnippetContainerTabFirst CSharpTab" id="CSharpTabId" style="background:white;border-bottom-color:white"><a href="javascript:setActiveTab('CodeSnippetContainerCode','CSharpCode','CSharpTabId');" title="C#">C#</a></div><div class="CodeSnippetContainerTab VisualBasicTab" id="VisualBasicTabId"><a href="javascript:setActiveTab('CodeSnippetContainerCode','VisualBasicCode','VisualBasicTabId');" title="Visual Basic">VB</a></div><div class="CodeSnippetContainerTab ManagedCPlusPlusTab" id="ManagedCPlusPlusTabId"><a href="javascript:setActiveTab('CodeSnippetContainerCode','ManagedCPlusPlusCode','ManagedCPlusPlusTabId');" title="Visual C++">C++</a></div><div class="CodeSnippetContainerTabRight"><!----></div></div><div class="CodeSnippetContainerCodeCollection"><div class="CodeSnippetToolBar"><div class="CodeSnippetToolBarText" /></div><div class="CodeSnippetContainerCode CSharpCode"><pre xml:space="preserve" class="libCScode"><span class="keyword">public</span> <span class="keyword">static</span> <a href="https://docs.microsoft.com/en-us/dotnet/api/system.collections.generic.list-1" target="_blank">List</a>&lt;T&gt; <span class="identifier">GetList</span>&lt;T&gt;(
+	<a href="https://docs.microsoft.com/en-us/dotnet/api/system.int32" target="_blank">int</a> <span class="parameter">count</span>,
+	<a href="https://docs.microsoft.com/en-us/dotnet/api/system.func-1" target="_blank">Func</a>&lt;T&gt; <span class="parameter">func</span>
+)
+</pre></div><div class="CodeSnippetContainerCode VisualBasicCode"><pre xml:space="preserve" class="libCScode"><span class="keyword">Public</span> <span class="keyword">Shared</span> <span class="keyword">Function</span> <span class="identifier">GetList</span>(<span class="keyword">Of</span> T) ( _
+	<span class="parameter">count</span> <span class="keyword">As</span> <a href="https://docs.microsoft.com/en-us/dotnet/api/system.int32" target="_blank">Integer</a>, _
+	<span class="parameter">func</span> <span class="keyword">As</span> <a href="https://docs.microsoft.com/en-us/dotnet/api/system.func-1" target="_blank">Func</a>(<span class="keyword">Of</span> T) _
+) <span class="keyword">As</span> <a href="https://docs.microsoft.com/en-us/dotnet/api/system.collections.generic.list-1" target="_blank">List</a>(<span class="keyword">Of</span> T)</pre></div><div class="CodeSnippetContainerCode ManagedCPlusPlusCode"><pre xml:space="preserve" class="libCScode"><span class="keyword">public</span>:
+<span class="keyword">generic</span>&lt;<span class="keyword">typename</span> T&gt;
+<span class="keyword">static</span> <a href="https://docs.microsoft.com/en-us/dotnet/api/system.collections.generic.list-1" target="_blank">List</a>&lt;T&gt;^ <span class="identifier">GetList</span>(
+	<a href="https://docs.microsoft.com/en-us/dotnet/api/system.int32" target="_blank">int</a>^ <span class="parameter">count</span>, 
+	<a href="https://docs.microsoft.com/en-us/dotnet/api/system.func-1" target="_blank">Func</a>&lt;T&gt;^ <span class="parameter">func</span>
+)</pre></div></div></div><h4 class="subHeading">Type Parameters</h4><dl><dt><span class="parameterItalic">T</span></dt><dd>The Mock <span class="nolink">Type</span>, usually an interface.</dd></dl><div id="parameters"><h4 class="subHeading">Parameters</h4><dl paramName="count"><dt><span class="parameterItalic">count</span></dt><dd>Type: <a href="https://docs.microsoft.com/en-us/dotnet/api/system.int32" target="_blank">Int32</a><br />The number of list items.</dd></dl><dl paramName="func"><dt><span class="parameterItalic">func</span></dt><dd>Type: <a href="https://docs.microsoft.com/en-us/dotnet/api/system.func-1" target="_blank">Func</a><span class="languageSpecificText"><span class="cs">&lt;</span><span class="vb">(Of </span><span class="cpp">&lt;</span><span class="nu">(</span><span class="fs">&lt;'</span></span><span class="selflink"><span class="typeparam">T</span></span><span class="languageSpecificText"><span class="cs">&gt;</span><span class="vb">)</span><span class="cpp">&gt;</span><span class="nu">)</span><span class="fs">&gt;</span></span><br />The function for creating the list items.</dd></dl></div><h4 class="subHeading">Return Value</h4><a href="https://docs.microsoft.com/en-us/dotnet/api/system.collections.generic.list&lt;t&gt;" target="_blank">List&lt;T&gt;</a>.</div><div class="LW_CollapsibleArea_Container"><div class="LW_CollapsibleArea_TitleDiv"><h2 class="LW_CollapsibleArea_Title">Examples</h2><div class="LW_CollapsibleArea_HrDiv"><hr class="LW_CollapsibleArea_Hr" /></div></div><a id="exampleSection"><!----></a>
+Example of how to create a list.
+<span id="cbc_1" x-lang="CSharp" codeLanguage="CSharp"><div class="highlight-title"><span class="highlight-copycode" tabindex="0"></span>C#</div><div class="code"><pre xml:space="preserve">GetList&lt;Model&gt;(<span class="highlight-number">3</span>, () =&gt; <span class="highlight-keyword">new</span> Model(name: Guid.NewGuid().ToString()));</pre></div></span>
+or
+<span id="cbc_2" x-lang="CSharp" codeLanguage="CSharp"><div class="highlight-title"><span class="highlight-copycode" tabindex="0"></span>C#</div><div class="code"><pre xml:space="preserve">GetList&lt;IModel&gt;(<span class="highlight-number">3</span>, () =&gt; Mocks.CreateInstance&lt;IModel&gt;());</pre></div></span></div><div class="LW_CollapsibleArea_Container"><div class="LW_CollapsibleArea_TitleDiv"><h2 class="LW_CollapsibleArea_Title">See Also</h2><div class="LW_CollapsibleArea_HrDiv"><hr class="LW_CollapsibleArea_Hr" /></div></div><a id="seeAlsoSection"><!----></a><div class="seeAlsoStyle"><a href="T-FastMoq.Mocker.htm">Mocker Class</a></div><div class="seeAlsoStyle"><a href="Overload-FastMoq.Mocker.GetList-.htm">GetList Overload</a></div><div class="seeAlsoStyle"><a href="N-FastMoq.htm">FastMoq Namespace</a></div></div></div>
             </div>
           </div>
         </div>
