--- a/Help/html/M-FastMoq.Mocker.GetObject_1.htm
+++ b/Help/html/M-FastMoq.Mocker.GetObject_1.htm
@@ -3,7 +3,7 @@
   <head><link rel="shortcut icon" href="../favicon.ico" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="save" content="history" />
-    <title>GetObject Method (Type)</title>
+    <title>GetObject Method (Type, Action(Object))</title>
     <link rel="stylesheet" type="text/css" href="../styles/lightweight.css" xmlns:MSHelp="http://msdn.microsoft.com/mshelp" xmlns:mshelp="http://msdn.microsoft.com/mshelp" xmlns:ddue="http://ddue.schemas.microsoft.com/authoring/2003/5" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:msxsl="urn:schemas-microsoft-com:xslt" />
     <link rel="stylesheet" type="text/css" href="../styles/lw-code.css" xmlns:MSHelp="http://msdn.microsoft.com/mshelp" xmlns:mshelp="http://msdn.microsoft.com/mshelp" xmlns:ddue="http://ddue.schemas.microsoft.com/authoring/2003/5" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:msxsl="urn:schemas-microsoft-com:xslt" />
     <script type="text/javascript" xmlns:MSHelp="http://msdn.microsoft.com/mshelp" xmlns:mshelp="http://msdn.microsoft.com/mshelp" xmlns:ddue="http://ddue.schemas.microsoft.com/authoring/2003/5" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:msxsl="urn:schemas-microsoft-com:xslt" src="../scripts/languageSelector.js"> </script>
@@ -11,10 +11,10 @@
     <meta name="file" content="M-FastMoq.Mocker.GetObject_1" xmlns:MSHelp="http://msdn.microsoft.com/mshelp" xmlns:mshelp="http://msdn.microsoft.com/mshelp" xmlns:ddue="http://ddue.schemas.microsoft.com/authoring/2003/5" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:msxsl="urn:schemas-microsoft-com:xslt" />
     <meta name="guid" content="M-FastMoq.Mocker.GetObject_1" xmlns:MSHelp="http://msdn.microsoft.com/mshelp" xmlns:mshelp="http://msdn.microsoft.com/mshelp" xmlns:ddue="http://ddue.schemas.microsoft.com/authoring/2003/5" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:msxsl="urn:schemas-microsoft-com:xslt" />
     <xml xmlns:MSHelp="http://msdn.microsoft.com/mshelp" xmlns:mshelp="http://msdn.microsoft.com/mshelp" xmlns:ddue="http://ddue.schemas.microsoft.com/authoring/2003/5" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:msxsl="urn:schemas-microsoft-com:xslt">
-      <MSHelp:Attr Name="AssetID" Value="M:FastMoq.Mocker.GetObject(System.Type)" />
-      <MSHelp:TOCTitle Title="GetObject Method (Type)" />
-      <MSHelp:RLTitle Title="Mocker.GetObject Method (Type) (FastMoq)" />
-      <MSHelp:Keyword Index="A" Term="M:FastMoq.Mocker.GetObject(System.Type)" />
+      <MSHelp:Attr Name="AssetID" Value="M:FastMoq.Mocker.GetObject(System.Type,System.Action{System.Object})" />
+      <MSHelp:TOCTitle Title="GetObject Method (Type, Action(Object))" />
+      <MSHelp:RLTitle Title="Mocker.GetObject Method (Type, Action(Object)) (FastMoq)" />
+      <MSHelp:Keyword Index="A" Term="M:FastMoq.Mocker.GetObject(System.Type,System.Action{System.Object})" />
       <MSHelp:Attr Name="APIType" Value="Managed" />
       <MSHelp:Attr Name="APILocation" Value="FastMoq.dll" />
       <MSHelp:Attr Name="APIName" Value="FastMoq.Mocker.GetObject" />
@@ -135,6 +135,9 @@
 </div>
 </div>
 <div class="TreeItem">
+<img src="../Item.gif"/><a class="UnselectedNode" onclick="javascript: return SelectNode(this);" href="M-FastMoq.Mocker.CreateMockInstance--1.htm" target="_self">CreateMockInstance(T) Method (Boolean)</a>
+</div>
+<div class="TreeItem">
 <img src="../Item.gif"/><a class="UnselectedNode" onclick="javascript: return SelectNode(this);" href="M-FastMoq.Mocker.GetArgData--1.htm" target="_self">GetArgData(T) Method (Dictionary(Type, Object))</a>
 </div>
 <div class="TreeNode">
@@ -157,13 +160,16 @@
 <img src="../Item.gif"/><a class="UnselectedNode" onclick="javascript: return SelectNode(this);" href="M-FastMoq.Mocker.GetObject.htm" target="_self">GetObject Method (ParameterInfo)</a>
 </div>
 <div class="TreeItem">
-<img src="../Item.gif"/><a class="UnselectedNode" onclick="javascript: return SelectNode(this);" href="M-FastMoq.Mocker.GetObject_1.htm" target="_self">GetObject Method (Type)</a>
+<img src="../Item.gif"/><a class="UnselectedNode" onclick="javascript: return SelectNode(this);" href="M-FastMoq.Mocker.GetObject_1.htm" target="_self">GetObject Method (Type, Action(Object))</a>
 </div>
 <div class="TreeItem">
-<img src="../Item.gif"/><a class="UnselectedNode" onclick="javascript: return SelectNode(this);" href="M-FastMoq.Mocker.GetObject--1.htm" target="_self">GetObject(T) Method </a>
+<img src="../Item.gif"/><a class="UnselectedNode" onclick="javascript: return SelectNode(this);" href="M-FastMoq.Mocker.GetObject--1.htm" target="_self">GetObject(T) Method (Action(T))</a>
 </div>
 <div class="TreeItem">
-<img src="../Item.gif"/><a class="UnselectedNode" onclick="javascript: return SelectNode(this);" href="M-FastMoq.Mocker.GetObject--1_1.htm" target="_self">GetObject(T) Method (Object[])</a>
+<img src="../Item.gif"/><a class="UnselectedNode" onclick="javascript: return SelectNode(this);" href="M-FastMoq.Mocker.GetObject--1_1.htm" target="_self">GetObject(T) Method </a>
+</div>
+<div class="TreeItem">
+<img src="../Item.gif"/><a class="UnselectedNode" onclick="javascript: return SelectNode(this);" href="M-FastMoq.Mocker.GetObject--1_2.htm" target="_self">GetObject(T) Method (Object[])</a>
 </div>
 </div>
 </div>
@@ -229,7 +235,7 @@
         <div class="topicContainer">
           <div class="topic">
             <p class="majorTitle" />
-            <h1 class="title">Mocker<span class="languageSpecificText"><span class="cs">.</span><span class="vb">.</span><span class="cpp">::</span><span class="nu">.</span><span class="fs">.</span></span>GetObject Method (Type)</h1>
+            <h1 class="title">Mocker<span class="languageSpecificText"><span class="cs">.</span><span class="vb">.</span><span class="cpp">::</span><span class="nu">.</span><span class="fs">.</span></span>GetObject Method (Type, Action<span class="languageSpecificText"><span class="cs">&lt;</span><span class="vb">(Of </span><span class="cpp">&lt;</span><span class="nu">(</span><span class="fs">&lt;'</span></span>Object<span class="languageSpecificText"><span class="cs">&gt;</span><span class="vb">)</span><span class="cpp">&gt;</span><span class="nu">)</span><span class="fs">&gt;</span></span>)</h1>
             <div id="mainSection">
               <div id="mainBody">
                 <div class="summary">
@@ -240,13 +246,16 @@ Gets the instance for the given <span class="code">type</span>.
    <a href="N-FastMoq.htm">FastMoq</a><br />
     <b>Assembly:</b>
    <span sdata="assembly">FastMoq</span> (in FastMoq.dll)<div class="LW_CollapsibleArea_Container"><div class="LW_CollapsibleArea_TitleDiv"><h2 class="LW_CollapsibleArea_Title">Syntax</h2><div class="LW_CollapsibleArea_HrDiv"><hr class="LW_CollapsibleArea_Hr" /></div></div><a id="syntaxSection"><!----></a><div class="CodeSnippetContainer"><div class="CodeSnippetContainerTabs"><div class="CodeSnippetContainerTabLeft"><!----></div><div class="CodeSnippetContainerTabFirst CSharpTab" id="CSharpTabId" style="background:white;border-bottom-color:white"><a href="javascript:setActiveTab('CodeSnippetContainerCode','CSharpCode','CSharpTabId');" title="C#">C#</a></div><div class="CodeSnippetContainerTab VisualBasicTab" id="VisualBasicTabId"><a href="javascript:setActiveTab('CodeSnippetContainerCode','VisualBasicCode','VisualBasicTabId');" title="Visual Basic">VB</a></div><div class="CodeSnippetContainerTab ManagedCPlusPlusTab" id="ManagedCPlusPlusTabId"><a href="javascript:setActiveTab('CodeSnippetContainerCode','ManagedCPlusPlusCode','ManagedCPlusPlusTabId');" title="Visual C++">C++</a></div><div class="CodeSnippetContainerTabRight"><!----></div></div><div class="CodeSnippetContainerCodeCollection"><div class="CodeSnippetToolBar"><div class="CodeSnippetToolBarText" /></div><div class="CodeSnippetContainerCode CSharpCode"><pre xml:space="preserve" class="libCScode"><span class="keyword">public</span> <a href="https://docs.microsoft.com/en-us/dotnet/api/system.object" target="_blank">Object</a> <span class="identifier">GetObject</span>(
-	<a href="https://docs.microsoft.com/en-us/dotnet/api/system.type" target="_blank">Type</a> <span class="parameter">type</span>
+	<a href="https://docs.microsoft.com/en-us/dotnet/api/system.type" target="_blank">Type</a> <span class="parameter">type</span>,
+	<a href="https://docs.microsoft.com/en-us/dotnet/api/system.action-1" target="_blank">Action</a>&lt;<a href="https://docs.microsoft.com/en-us/dotnet/api/system.object" target="_blank">Object</a>&gt; <span class="parameter">initAction</span>
 )</pre></div><div class="CodeSnippetContainerCode VisualBasicCode"><pre xml:space="preserve" class="libCScode"><span class="keyword">Public</span> <span class="keyword">Function</span> <span class="identifier">GetObject</span> ( _
-	<span class="parameter">type</span> <span class="keyword">As</span> <a href="https://docs.microsoft.com/en-us/dotnet/api/system.type" target="_blank">Type</a> _
+	<span class="parameter">type</span> <span class="keyword">As</span> <a href="https://docs.microsoft.com/en-us/dotnet/api/system.type" target="_blank">Type</a>, _
+	<span class="parameter">initAction</span> <span class="keyword">As</span> <a href="https://docs.microsoft.com/en-us/dotnet/api/system.action-1" target="_blank">Action</a>(<span class="keyword">Of</span> <a href="https://docs.microsoft.com/en-us/dotnet/api/system.object" target="_blank">Object</a>) _
 ) <span class="keyword">As</span> <a href="https://docs.microsoft.com/en-us/dotnet/api/system.object" target="_blank">Object</a></pre></div><div class="CodeSnippetContainerCode ManagedCPlusPlusCode"><pre xml:space="preserve" class="libCScode"><span class="keyword">public</span>:
 <a href="https://docs.microsoft.com/en-us/dotnet/api/system.object" target="_blank">Object</a>^ <span class="identifier">GetObject</span>(
-	<a href="https://docs.microsoft.com/en-us/dotnet/api/system.type" target="_blank">Type</a>^ <span class="parameter">type</span>
-)</pre></div></div></div><div id="parameters"><h4 class="subHeading">Parameters</h4><dl paramName="type"><dt><span class="parameterItalic">type</span></dt><dd>Type: <a href="https://docs.microsoft.com/en-us/dotnet/api/system.type" target="_blank">Type</a><br />The type.</dd></dl></div><h4 class="subHeading">Return Value</h4><a href="https://docs.microsoft.com/en-us/dotnet/api/system.nullable" target="_blank">Nullable</a>.</div><div class="LW_CollapsibleArea_Container"><div class="LW_CollapsibleArea_TitleDiv"><h2 class="LW_CollapsibleArea_Title">Exceptions</h2><div class="LW_CollapsibleArea_HrDiv"><hr class="LW_CollapsibleArea_Hr" /></div></div><a id="exceptionsSection"><!----></a><div class="tableSection"><table width="100%" cellspacing="0" cellpadding="5" frame="lhs"><tr><th class="exceptionNameColumn">Exception</th><th class="exceptionConditionColumn">Condition</th></tr><tr><td><a href="https://docs.microsoft.com/en-us/dotnet/api/system.argumentnullexception" target="_blank">ArgumentNullException</a></td><td>type</td></tr><tr><td><a href="https://docs.microsoft.com/en-us/dotnet/api/system.invalidprogramexception" target="_blank">InvalidProgramException</a></td><td>Unable to get the Mock.</td></tr></table></div></div><div class="LW_CollapsibleArea_Container"><div class="LW_CollapsibleArea_TitleDiv"><h2 class="LW_CollapsibleArea_Title">See Also</h2><div class="LW_CollapsibleArea_HrDiv"><hr class="LW_CollapsibleArea_Hr" /></div></div><a id="seeAlsoSection"><!----></a><div class="seeAlsoStyle"><a href="T-FastMoq.Mocker.htm">Mocker Class</a></div><div class="seeAlsoStyle"><a href="Overload-FastMoq.Mocker.GetObject.htm">GetObject Overload</a></div><div class="seeAlsoStyle"><a href="N-FastMoq.htm">FastMoq Namespace</a></div></div></div>
+	<a href="https://docs.microsoft.com/en-us/dotnet/api/system.type" target="_blank">Type</a>^ <span class="parameter">type</span>, 
+	<a href="https://docs.microsoft.com/en-us/dotnet/api/system.action-1" target="_blank">Action</a>&lt;<a href="https://docs.microsoft.com/en-us/dotnet/api/system.object" target="_blank">Object</a>^&gt;^ <span class="parameter">initAction</span>
+)</pre></div></div></div><div id="parameters"><h4 class="subHeading">Parameters</h4><dl paramName="type"><dt><span class="parameterItalic">type</span></dt><dd>Type: <a href="https://docs.microsoft.com/en-us/dotnet/api/system.type" target="_blank">Type</a><br />The type.</dd></dl><dl paramName="initAction"><dt><span class="parameterItalic">initAction</span></dt><dd>Type: <a href="https://docs.microsoft.com/en-us/dotnet/api/system.action-1" target="_blank">Action</a><span class="languageSpecificText"><span class="cs">&lt;</span><span class="vb">(Of </span><span class="cpp">&lt;</span><span class="nu">(</span><span class="fs">&lt;'</span></span><a href="https://docs.microsoft.com/en-us/dotnet/api/system.object" target="_blank">Object</a><span class="languageSpecificText"><span class="cs">&gt;</span><span class="vb">)</span><span class="cpp">&gt;</span><span class="nu">)</span><span class="fs">&gt;</span></span><br />The initialize action.</dd></dl></div><h4 class="subHeading">Return Value</h4><a href="https://docs.microsoft.com/en-us/dotnet/api/system.nullable" target="_blank">Nullable</a>.</div><div class="LW_CollapsibleArea_Container"><div class="LW_CollapsibleArea_TitleDiv"><h2 class="LW_CollapsibleArea_Title">Exceptions</h2><div class="LW_CollapsibleArea_HrDiv"><hr class="LW_CollapsibleArea_Hr" /></div></div><a id="exceptionsSection"><!----></a><div class="tableSection"><table width="100%" cellspacing="0" cellpadding="5" frame="lhs"><tr><th class="exceptionNameColumn">Exception</th><th class="exceptionConditionColumn">Condition</th></tr><tr><td><a href="https://docs.microsoft.com/en-us/dotnet/api/system.argumentnullexception" target="_blank">ArgumentNullException</a></td><td>type</td></tr><tr><td><a href="https://docs.microsoft.com/en-us/dotnet/api/system.invalidprogramexception" target="_blank">InvalidProgramException</a></td><td>Unable to get the Mock.</td></tr></table></div></div><div class="LW_CollapsibleArea_Container"><div class="LW_CollapsibleArea_TitleDiv"><h2 class="LW_CollapsibleArea_Title">See Also</h2><div class="LW_CollapsibleArea_HrDiv"><hr class="LW_CollapsibleArea_Hr" /></div></div><a id="seeAlsoSection"><!----></a><div class="seeAlsoStyle"><a href="T-FastMoq.Mocker.htm">Mocker Class</a></div><div class="seeAlsoStyle"><a href="Overload-FastMoq.Mocker.GetObject.htm">GetObject Overload</a></div><div class="seeAlsoStyle"><a href="N-FastMoq.htm">FastMoq Namespace</a></div></div></div>
             </div>
           </div>
         </div>
