--- a/Help/html/M-FastMoq.MockerTestBase-1.-ctor_2.htm
+++ b/Help/html/M-FastMoq.MockerTestBase-1.-ctor_2.htm
@@ -121,7 +121,10 @@
 <img src="../Item.gif"/><a class="UnselectedNode" onclick="javascript: return SelectNode(this);" href="M-FastMoq.MockerTestBase-1.-ctor_4.htm" target="_self">MockerTestBase(TComponent) Constructor (Func(Mocker, TComponent), Nullable(Action(Nullable(TComponent))))</a>
 </div>
 <div class="TreeItem">
-<img src="../Item.gif"/><a class="UnselectedNode" onclick="javascript: return SelectNode(this);" href="M-FastMoq.MockerTestBase-1.-ctor_5.htm" target="_self">MockerTestBase(TComponent) Constructor (Nullable(Action(Mocker)), Nullable(Func(Mocker, Nullable(TComponent))), Nullable(Action(Nullable(TComponent))))</a>
+<img src="../Item.gif"/><a class="UnselectedNode" onclick="javascript: return SelectNode(this);" href="M-FastMoq.MockerTestBase-1.-ctor_5.htm" target="_self">MockerTestBase(TComponent) Constructor (Boolean)</a>
+</div>
+<div class="TreeItem">
+<img src="../Item.gif"/><a class="UnselectedNode" onclick="javascript: return SelectNode(this);" href="M-FastMoq.MockerTestBase-1.-ctor_6.htm" target="_self">MockerTestBase(TComponent) Constructor (Nullable(Action(Mocker)), Nullable(Func(Mocker, Nullable(TComponent))), Nullable(Action(Nullable(TComponent))))</a>
 </div>
 </div>
 </div>
