--- a/Help/html/P-FastMoq.InstanceModel.InstanceType.htm
+++ b/Help/html/P-FastMoq.InstanceModel.InstanceType.htm
@@ -96,6 +96,9 @@
 <img class="TreeNodeImg" onclick="javascript: Toggle(this);" src="../Collapsed.png"/><a class="UnselectedNode" onclick="javascript: return Expand(this);" href="Properties.T-FastMoq.InstanceModel.htm" target="_self">InstanceModel Properties</a>
 <div class="Hidden">
 <div class="TreeItem">
+<img src="../Item.gif"/><a class="UnselectedNode" onclick="javascript: return SelectNode(this);" href="P-FastMoq.InstanceModel.Arguments.htm" target="_self">Arguments Property </a>
+</div>
+<div class="TreeItem">
 <img src="../Item.gif"/><a class="UnselectedNode" onclick="javascript: return SelectNode(this);" href="P-FastMoq.InstanceModel.CreateFunc.htm" target="_self">CreateFunc Property </a>
 </div>
 <div class="TreeItem">
