--- a/Help/html/P-FastMoq.Mocker.Strict.htm
+++ b/Help/html/P-FastMoq.Mocker.Strict.htm
@@ -122,6 +122,9 @@
 <img class="TreeNodeImg" onclick="javascript: Toggle(this);" src="../Collapsed.png"/><a class="UnselectedNode" onclick="javascript: return Expand(this);" href="Properties.T-FastMoq.Mocker.htm" target="_self">Mocker Properties</a>
 <div class="Hidden">
 <div class="TreeItem">
+<img src="../Item.gif"/><a class="UnselectedNode" onclick="javascript: return SelectNode(this);" href="P-FastMoq.Mocker.InnerMockResolution.htm" target="_self">InnerMockResolution Property </a>
+</div>
+<div class="TreeItem">
 <img src="../Item.gif"/><a class="UnselectedNode" onclick="javascript: return SelectNode(this);" href="P-FastMoq.Mocker.Strict.htm" target="_self">Strict Property </a>
 </div>
 </div>
