Update API Documentation

--- a/Help/html/M-FastMoq.Mocker.GetDefaultValue.htm
+++ b/Help/html/M-FastMoq.Mocker.GetDefaultValue.htm
@@ -115,6 +115,9 @@
 <img class="TreeNodeImg" onclick="javascript: Toggle(this);" src="../Collapsed.png"/><a class="UnselectedNode" onclick="javascript: return Expand(this);" href="Methods.T-FastMoq.Mocker.htm" target="_self">Mocker Methods</a>
 <div class="Hidden">
 <div class="TreeItem">
+<img src="../Item.gif"/><a class="UnselectedNode" onclick="javascript: return SelectNode(this);" href="M-FastMoq.Mocker.AddInjections--1.htm" target="_self">AddInjections(T) Method </a>
+</div>
+<div class="TreeItem">
 <img src="../Item.gif"/><a class="UnselectedNode" onclick="javascript: return SelectNode(this);" href="M-FastMoq.Mocker.AddMock--1.htm" target="_self">AddMock(T) Method (Mock(T), Boolean, Boolean)</a>
 </div>
 <div class="TreeItem">
