--- a/Help/html/Methods.T-FastMoq.Mocker.htm
+++ b/Help/html/Methods.T-FastMoq.Mocker.htm
@@ -109,6 +109,9 @@
 <img class="TreeNodeImg" onclick="javascript: Toggle(this);" src="../Collapsed.png"/><a class="UnselectedNode" onclick="javascript: return Expand(this);" href="Methods.T-FastMoq.Mocker.htm" target="_self">Mocker Methods</a>
 <div class="Hidden">
 <div class="TreeItem">
+<img src="../Item.gif"/><a class="UnselectedNode" onclick="javascript: return SelectNode(this);" href="M-FastMoq.Mocker.AddInjections--1.htm" target="_self">AddInjections(T) Method </a>
+</div>
+<div class="TreeItem">
 <img src="../Item.gif"/><a class="UnselectedNode" onclick="javascript: return SelectNode(this);" href="M-FastMoq.Mocker.AddMock--1.htm" target="_self">AddMock(T) Method (Mock(T), Boolean, Boolean)</a>
 </div>
 <div class="TreeItem">
@@ -260,6 +263,19 @@
             </th>
                       <th class="nameColumn">Name</th>
                       <th class="descriptionColumn">Description</th>
+                    </tr>
+                    <tr data="public;declared;notNetfw;">
+                      <td>
+                        <img src="../icons/pubmethod.gif" alt="Public method" title="Public method" />
+                      </td>
+                      <td>
+                        <a href="M-FastMoq.Mocker.AddInjections--1.htm">AddInjections<span class="languageSpecificText"><span class="cs">&lt;</span><span class="vb">(Of </span><span class="cpp">&lt;</span><span class="fs">&lt;'</span><span class="nu">(</span></span>T<span class="languageSpecificText"><span class="cs">&gt;</span><span class="vb">)</span><span class="cpp">&gt;</span><span class="fs">&gt;</span><span class="nu">)</span></span></a>
+                      </td>
+                      <td>
+                        <div class="summary">
+Adds the injections to the specified object properties and fields.
+</div>
+                      </td>
                     </tr>
                     <tr data="public;declared;notNetfw;">
                       <td>
